k8s/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: default
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "alb"       # ALB 타입 지정
    service.beta.kubernetes.io/aws-load-balancer-internal: "false" # "true"로 설정하면 내부 전용 ALB

  labels:
    app: auth
    environment: production
spec:
  type: LoadBalancer
  selector:
    app: auth
  ports:
    - name: "http"
      protocol: TCP
      port: 80           # 외부에서 접근하는 포트
      targetPort: 3000   # 컨테이너에서 노출하는 포트
