k8s/performance-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: performance-service
  namespace: default
  labels:
    app: performance
    environment: production
spec:
  type: NodePort
  selector:
    app: performance
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 3000
    nodePort: 30003
  externalTrafficPolicy: Local
